--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>sheeparegreat</title>
   </head>
   <body>    
-    <h2><a href="presentations/">Presentations</a></h2>
+    <h2><a href="presentations/index.html">Presentations</a></h2>
     </h2> 
   </body>
 </html>
