--- a/presentations/index.html
+++ b/presentations/index.html
@@ -5,7 +5,7 @@
   <body>    
   <ul>
 
-<li><a href="./JpegTutorial.pdf">JPEG Tutorial</a> - Masters University Project. I researched and documented the JPEG encoding algorthms in the form of a Tutorial.  I created a lecture/lab class for 3rd year EE students on JPEG image processing.</li>  
+<li><a href="./JpegTutorial.pdf">JPEG Tutorial</a> - Masters University Project. I researched and documented the JPEG encoding algorithms in the form of a Tutorial.  I created a lecture/lab class for 3rd year EE students on JPEG image processing.</li>  
 
 <li> <a href="./fosdem-2007-metasploit.pdf">FOSDEM 2007</a> - A writeup of FOSDEM 2007 which I attended with friends.  We presented the topics and finished with a demonstration of exploiting a Windows XP SP0 machine with the newly rewritten Metaspoit Framework. </li>
   </ul>
